<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFE9ED"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_phq9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="#FFE9ED"
        android:paddingTop="16dp"
        android:orientation="vertical"
        tools:context=".ui.adhd.adhdActivity">

        <TextView
            android:text="@string/adhdOvr"
            android:id="@+id/general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textColor="#D5006D"
            android:textColorHighlight="#D5006D"
            android:textColorHint="#D5006D"
            android:textColorLink="#D5006D"
            android:textSize="25sp"
        />

        <TextView
            android:text="@string/adhdQ1"
            android:id="@+id/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:autoSizeTextType="uniform"
            android:textAllCaps="false"
            android:textColor="#D5006D"
            android:textColorHighlight="#D5006D"
            android:textColorHint="#D5006D"
            android:textColorLink="#D5006D"
         />

        <Button
            android:text="@string/adhdA1"
            android:id="@+id/choiceA"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#FFC0CB"
            android:textAllCaps="false"
            android:textColor="#664564"
            android:textColorHighlight="#664564"
            android:textColorHint="#664564"
            android:textColorLink="#664564"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/questions"
        />

        <Button
            android:text="@string/adhdA2"
            android:id="@+id/choiceB"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#FFC0CB"
            android:textAllCaps="false"
            android:textColor="#664564"
            android:textColorHighlight="#664564"
            android:textColorHint="#664564"
            android:textColorLink="#664564"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/choiceA"
        />

        <Button
            android:text="@string/adhdA3"
            android:id="@+id/choiceC"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#FFC0CB"
            android:textAllCaps="false"
            android:textColor="#664564"
            android:textColorHighlight="#664564"
            android:textColorHint="#664564"
            android:textColorLink="#664564"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/choiceB"
        />

        <Button
            android:text="@string/adhdA4"
            android:id="@+id/choiceE"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#FFC0CB"
            android:textAllCaps="false"
            android:textColor="#664564"
            android:textColorHighlight="#664564"
            android:textColorHint="#664564"
            android:textColorLink="#664564"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/choiceC"
        />

        <Button
            android:text="@string/adhdA5"
            android:id="@+id/choiceD"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#FFC0CB"
            android:textAllCaps="false"
            android:textColor="#664564"
            android:textColorHighlight="#664564"
            android:textColorHint="#664564"
            android:textColorLink="#664564"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/choiceD"
        />

    </LinearLayout>
</ScrollView>