<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".ui.habit.NewHabitActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="252dp"
        android:layout_gravity="center_horizontal"
        android:background="#FFC0CB"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="116dp"
            android:layout_height="123dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/_image"
            app:civ_border_color="@android:color/black"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arima_madurai_extrabold"
            android:text="SN Mentalhealth"
            android:textAlignment="center"
            android:textColor="#D5006D"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:layout_editor_absoluteX="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:backgroundTint="#FFC0CB">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/habit_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>

                <EditText
                    android:id="@+id/habit_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:inputType="textPersonName"
                    android:hint="Enter habit name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/habit_end_date"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>

                <EditText
                    android:id="@+id/habit_end_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:inputType="date"
                    android:focusable="false"
                    android:clickable="true"
                    android:hint="Select end date"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/habit_frequency"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>

                <Spinner
                    android:id="@+id/habit_frequency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/add_new_habit"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#D5006D"
        android:text="@string/add_new_habit"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

</LinearLayout>